# pqc_signatures

./: .gitignore  README.md  dev-branch-tasklist.md  dev-setup.sh  dev_branch_tasklist.md  dev_setup.sh  gitignore  list  pqc.xlsx  setup.sh
Biscuit/Reference_Implementation/biscuit128f/: perf_api.c  rng.c
Biscuit/Reference_Implementation/biscuit128s/: batch_tools.h
Biscuit/Reference_Implementation/biscuit192f/: PQCgenKAT_sign.c  utils.h
cross/Optimized_Implementation/lib/: aes256.c
cross/Reference_Implementation/include/: fq_arith.h  pack_unpack.h  restr_arith.h  sha2.h  sha3.h
cross/Reference_Implementation/lib/: aes256.h  keccakf1600.c  merkle_tree.h  seedtree.h  sign.c
docs/: MAIN_BRANCH_README.md  algorithm_details.md  developer_info.md  golang_solution_documentation.md
general_code/: readme.md
general_code/raccoon-main/: Makefile
general_code/raccoon-main/ref-py/: racc_core.py
main_default_src_backup/Ascon_sign/: Makefile_Ascon-Sign-192s_robust
nist/AIMer/: README
nist/AIMer/Extra/: Open Source Notice.txt
nist/ALTEQ/: README.txt
nist/ALTEQ/Optimized_Implementation/: Makefile  compress.h  expand.c
nist/ALTEQ/Reference_Implementation/: Makefile  compress.c  compress.h  expand.c  go.bat  pqsign.c  sign.c
nist/DME-SIGN_nist-pqc-2023/dme-3rnds-8vars-48bits-sign/: README
nist/EagleSign/Specifications_and_Supporting_Documentation/: README.md
nist/FAEST/: README
nist/FuLecca/KAT/: PQCsignKAT_2636.rsp
nist/HPPC/: INSTALL
nist/KAZ-SIGN/: README.txt
nist/KAZ-SIGN/Optimized_Implementation/: README.txt
nist/KAZ-SIGN/Reference_Implementation/: KAZ_SIGN_REFERENCES.txt
nist/MEDS-2023/: README
nist/Preon/: README.txt
nist/QR_UOV/: README.txt
nist/QR_UOV/Alternative_Implementation/: Makefile
nist/QR_UOV/Reference_Implementation/: README.txt
nist/SPHINCS-ALPHA/: README
nist/TUOV/: README
nist/TUOV/Optimized_Implementation/: Makefile  generate_KAT.sh
nist/TUOV/Reference_Implementation/: generate_KAT.sh
nist/WaveR1_1/Reference_implementation/: AUTHORS.md
nist/Xifrat/: README
nist/Xifrat/KAT/: PQCsignKAT_320.rsp
nist/Xifrat/ReduceSec_Implementation/: Makefile  common.h  xifrat-funcs.c  xifrat-sign.c
nist/Xifrat/Reference_Implementation/: Makefile  PQCgenKAT_sign.c  api.h  endian.h  go.bat  keccak-f-1600.c  rijndael.c  shake.h  sign.c  sponge.h
nist/cross/: list.bat
nist/cross/Reference_Implementation/: go.bat  makefile
nist/eMLE2.0/: README.txt
nist/haetae/KAT/: PQCsignKAT_2112.rsp
nist/haetae/Reference_Implementation/: CMakeCache.txt  CMakeLists.txt
nist/haetae/Reference_Implementation/benchmark/: speed.c
nist/haetae/Reference_Implementation/include/: encoding.h  randombytes.h  symmetric.h
nist/haetae/Reference_Implementation/src/: go.bat  pqgetKat_sign.c  sign.c
nist/hawk/Extra/: README.md
nist/hawk/KAT/: IntermediateValues1024.txt  PQCsignKAT_96.rsp
nist/less/: README
nist/mayo/Optimized_Implementation/: README.md
nist/mirith/: .gitignore  NOTICE.txt  README.txt
nist/mirith/Optimized_Implementation/mirith_hypercube_neon_Vb_shorter/: CMakeLists.txt
nist/mirith/Reference_Implementation/mirith_IIIa_short/: CMakeLists.txt
nist/pqsigRM/: README
nist/prov/: README.txt
nist/sphincs/: README
nist/sqi/Reference_Implementation/: README.md
nist/squirrels/KAT_Check/: Makefile
nist/uov/UOV/: README
nist/vox/: README
nist/vox/Optimized_Implementation/: README
papers/: readme.md
scripts/: copy_modified_src_files.sh  go.mod  main.go  page.html  readme.md  result_parser.py  sig-speed-test.sh  sig_speed_test.sh  test.json  variation_array_util.sh
src/AIMer/Extra/: Open Source Notice.txt
src/FAEST/Optimized_Implementation/: README
src/Haetae/: README
src/Haetae/KAT/: PQCsignKAT_1408.rsp  PQCsignKAT_2752.rsp
src/Haetae/Optimized_Implementation/: CMakeLists.txt
src/Haetae/Reference_Implementation/kat/: CMakeLists.txt
src/HuFu/HuFu/: Readme.md
src/biscuit/: README
src/hawk/: README.txt
src/modified_nist_src_files/: IMPLEMENTATION_CONVENTION.md
src/nist/CROSS/Additional_Implementations/KAT_Generation/: CMakeLists.txt
src/nist/CROSS/Additional_Implementations/KAT_Generation/lib/: KAT_NIST_rng.c  PQCgenKAT_sign.c
src/nist/HAETAE/Optimized_Implementation/test/: CMakeLists.txt
src/nist/HAETAE/Reference_Implementation/benchmark/: CMakeLists.txt
src/nist/LESS/Additional_Implementations/Benchmarking/: CMakeLists.txt
src/nist/LESS/Additional_Implementations/Benchmarking/include/: timing_and_stat.h
src/nist/LESS/Additional_Implementations/KAT_Generation/: CMakeLists.txt
src/nist/LESS/Additional_Implementations/KAT_Generation/lib/: PQCgenKAT_sign.c
src/nist/MIRA/Reference_Implementation/MIRA-192s/lib/XKCP/: CMakeLists.txt
src/performance-eval-scripts/: pqcsign.c
src/performance_eval_scripts/: pqcsign.c
src/raccoon/: test_output.txt
src/squirrels/: .gitignore
test-scripts/: sig-speed-test.sh
test_data/: completed.txt
test_data/alg_lists/: MEDS_2023_variations.txt  biscuit_variations.txt  pqsigRM_variations.txt  raccoon_variations.txt  uov_variations.txt
test_data/alg_variation_lists/: 3WISE_variations.txt  AIMer_variations.txt  ALTEQ_variations.txt  Ascon_Sign_variations.txt  CROSS_variations.txt  DME_Sign_variations.txt  EHTv3v4_variations.txt  EagleSign_variations.txt  FAEST_variations.txt  FuLecca_variations.txt  HAETAE_variations.txt  HAWK_variations.txt  HPPC_variations.txt  HuFu_variations.txt  KAZ_SIGN_variations.txt  LESS_variations.txt  MAYO_variations.txt  MIRA_variations.txt  MQOM_variations.txt  MiRitH_variations.txt  PERK_variations.txt  PROV_variations.txt  Preon_variations.txt  QR_UOV_variations.txt  RYDE_variations.txt  Raccoon_variations.txt  SDitH_hypercube_variations.txt  SDitH_threshold_variations.txt  SDitH_variations.txt  SNOVA_variations.txt  SPHINCS_alpha_variations.txt  SQIsign_variations.txt  SQUIRRELS_variations.txt  TUOV_variations.txt  VOX_variations.txt  Wave_variations.txt  Xifrat1_Sign_I_variations.txt  eMLE_Sig_2.0_variations.txt
test_data/sig_algs_list/: sig_algs.txt
test_scripts/: sig-speed-test.sh
(+3037 files in other folders)
